# ktl

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
.github/workflows/: cmake-multi-platform.yml  full.yml  simplified.yml
Core/: Readme.txt
Core/Algorithms/: Aggregation.h  Querying.h  Random.cpp  Sorting.cpp  Sorting.h
Core/Allocators/: BumpAlloc.h  FixedAlloc.h  HeapAlloc.h  PoolSyncAlloc.h
Core/Collections/: AllocHelper.h  Array.h  BitArray.h  ChunkedArray.h  CollectionsUtils.h  Dictionary.h  HashSet.h  Index.h  LoadFHelper.h  Ring.h
Core/Debugging/: Assertions.h  LifecycleTracker.h
Core/Language/: Communism.h  Concepts.h  Constraints.h  Keywords.h  Memory.h  Templates.h  TypeInfo.h
Core/Math/: AllocMath.h  Arithmetic.h  Growing.h  Hashing.h  HashingFunctions.h  Probing.h  Stastics.h
Core/Threading/: JobScheduler.cpp
Core/Types/: Any.h  Box.h  IterHint.h  Nullable.h  Numbers.h  Pair.h  Ref.h  Span.h
Debug/Natvis/: Span.natvis
Docs/: About.md  Allocators.md  Capacity.md  Memory.md  Queries.md  Style.md  Tombstones.md
Include/Algorithms/: Aggregation.h  Querying.h  Random.h  Sorting.h
Include/Allocators/: AllocConcept.h  BumpAlloc.h  FixedAlloc.h  HeapAlloc.h  LimiterAlloc.h  PolymorphicAlloc.h
Include/Collections/: AllocHelper.h  Array.h  BitArray.h  ChunkedArray.h  CollectionsUtils.h  Dictionary.h  HashSet.h  Ring.h  StaticArray.h  StaticBitArray.h
Include/Language/: Constraints.h  Keywords.h  Templates.h  TypeInfo.h  TypeTraits.h  Yolo.h
Include/Math/: Arithmetic.h  Growing.h  Hashing.h  Probing.h  Stastics.h
Include/Threading/: JobScheduler.h
Include/Types/: Base.h  BitPuller.h  BitRef.h  BitsBlock.h  Box.h  Dummy.h  EnumPuller.h  EnumPullerQuerying.h  EnumSet.h  Index.h  Nullable.h  NullableAsSpan.h  Numbers.h  Pair.h  RangePuller.h  RawPuller.h  Rc.h  RcBox.h  Ref.h  SizeHint.h  Span.h
Tests/: AlgorithmsTests.cpp  AllocatorsTests.cpp  ArithmeticTests.cpp  ArrayIteratorsTests.cpp  ArrayTests.cpp  BitArrayTests.cpp  BoxTests.cpp  ChunkedArrayTests.cpp  DictionaryIteratorsTests.cpp  DictionaryTests.cpp  HashSetTests.cpp  JobTests.cpp  NullableTests.cpp  QueryingTests.cpp  RingTests.cpp  StatisticsTests.cpp  TypeTraitsTests.cpp  UtilsTests.cpp
